k8s/web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web
  namespace: qrscan
spec:
  selector:
    app: qrscan-web
  ports:
    - name: http
      port: 8080
      targetPort: 8080
